--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "event-manager-nagarro",
+  "name": "event-manager",
   "version": "0.1.0",
   "description": "Event Management Website",
-  "repository": "https://github.com/coding-blocks-archives/EventManagerNodejs",
+  "repository": "https://github.com/agampreetsingh/Event-management-node",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Arnav Gupta",
+  "author": "Agampreet Singh",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.17.2",
